estoy en tus manos dios

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-COMPANY_NAME=XXXXXXXX
+COMPANY_NAME=NexaCloud
 
-DB_USER=XXXXXXXX
-DB_PASSWORD=XXXXXXXX
-DB_HOST=XXXXXXXX
-DB_DATABASE=XXXXXXXX
+DB_USER=nexa_admin
+DB_PASSWORD=tjaUWyY7c+wXXl6r
+DB_HOST=nexa-db-instance.cl1mlfaminhs.us-east-1.rds.amazonaws.com
+DB_DATABASE=estudiante
 
 AWS_S3_LAMBDA_URL=XXXXXXXX
 AWS_S3_LAMBDA_APIKEY=XXXXXXXX
 
-AWS_DB_LAMBDA_URL=XXXXXXXX
-AWS_DB_LAMBDA_APIKEY=XXXXXXXX
+AWS_DB_LAMBDA_URL=https://alc3o38sfa.execute-api.us-east-1.amazonaws.com
+AWS_DB_LAMBDA_APIKEY=AfEZpb96hW73HF6uQHQW56d2tXaSApJH3O0fKqZA
 
 STRESS_PATH="/usr/bin/stress"
 LOAD_BALANCER_URL="https://tu_url.com"
